solver/grammar.output
Grammar

    0 $accept: tmsp $end

    1 tmsp: /* empty */
    2     | declarations

    3 declarations: declaration T_LINE_SEP
    4             | declarations declaration T_LINE_SEP

    5 declaration: /* empty */
    6            | 'R' T_INT T_INT T_STRING
    7            | 'T' T_INT T_INT T_INT T_STRING
    8            | 'J' T_INT T_INT T_INT T_STRING
    9            | 'A' T_INT T_INT T_INT T_STRING
   10            | 'A' T_INT T_INT T_INT T_STRING T_INT
   11            | 'A' T_INT T_INT T_INT T_STRING T_INT T_INT T_INT
   12            | 'D' T_INT T_INT T_INT T_STRING
   13            | 'Q' T_INT T_INT T_INT T_INT
   14            | 'S' T_INT T_INT T_INT T_INT
   15            | 'P' T_INT T_INT T_INT T_INT
   16            | 'p' T_INT T_INT T_INT T_INT
   17            | 'F' T_INT T_INT T_INT
   18            | 'G' T_INT T_INT T_INT T_INT


Terminals, with rules where they appear

$end (0) 0
'A' (65) 9 10 11
'D' (68) 12
'F' (70) 17
'G' (71) 18
'J' (74) 8
'P' (80) 15
'Q' (81) 13
'R' (82) 6
'S' (83) 14
'T' (84) 7
'p' (112) 16
error (256)
T_INT (258) 6 7 8 9 10 11 12 13 14 15 16 17 18
T_STRING (259) 6 7 8 9 10 11 12
T_LINE_SEP (260) 3 4


Nonterminals, with rules where they appear

$accept (17)
    on left: 0
tmsp (18)
    on left: 1 2, on right: 0
declarations (19)
    on left: 3 4, on right: 2 4
declaration (20)
    on left: 5 6 7 8 9 10 11 12 13 14 15 16 17 18, on right: 3 4


state 0

    0 $accept: . tmsp $end

    'R'  shift, and go to state 1
    'T'  shift, and go to state 2
    'J'  shift, and go to state 3
    'A'  shift, and go to state 4
    'D'  shift, and go to state 5
    'Q'  shift, and go to state 6
    'S'  shift, and go to state 7
    'P'  shift, and go to state 8
    'p'  shift, and go to state 9
    'F'  shift, and go to state 10
    'G'  shift, and go to state 11

    T_LINE_SEP  reduce using rule 5 (declaration)
    $default    reduce using rule 1 (tmsp)

    tmsp          go to state 12
    declarations  go to state 13
    declaration   go to state 14


state 1

    6 declaration: 'R' . T_INT T_INT T_STRING

    T_INT  shift, and go to state 15


state 2

    7 declaration: 'T' . T_INT T_INT T_INT T_STRING

    T_INT  shift, and go to state 16


state 3

    8 declaration: 'J' . T_INT T_INT T_INT T_STRING

    T_INT  shift, and go to state 17


state 4

    9 declaration: 'A' . T_INT T_INT T_INT T_STRING
   10            | 'A' . T_INT T_INT T_INT T_STRING T_INT
   11            | 'A' . T_INT T_INT T_INT T_STRING T_INT T_INT T_INT

    T_INT  shift, and go to state 18


state 5

   12 declaration: 'D' . T_INT T_INT T_INT T_STRING

    T_INT  shift, and go to state 19


state 6

   13 declaration: 'Q' . T_INT T_INT T_INT T_INT

    T_INT  shift, and go to state 20


state 7

   14 declaration: 'S' . T_INT T_INT T_INT T_INT

    T_INT  shift, and go to state 21


state 8

   15 declaration: 'P' . T_INT T_INT T_INT T_INT

    T_INT  shift, and go to state 22


state 9

   16 declaration: 'p' . T_INT T_INT T_INT T_INT

    T_INT  shift, and go to state 23


state 10

   17 declaration: 'F' . T_INT T_INT T_INT

    T_INT  shift, and go to state 24


state 11

   18 declaration: 'G' . T_INT T_INT T_INT T_INT

    T_INT  shift, and go to state 25


state 12

    0 $accept: tmsp . $end

    $end  shift, and go to state 26


state 13

    2 tmsp: declarations .
    4 declarations: declarations . declaration T_LINE_SEP

    'R'  shift, and go to state 1
    'T'  shift, and go to state 2
    'J'  shift, and go to state 3
    'A'  shift, and go to state 4
    'D'  shift, and go to state 5
    'Q'  shift, and go to state 6
    'S'  shift, and go to state 7
    'P'  shift, and go to state 8
    'p'  shift, and go to state 9
    'F'  shift, and go to state 10
    'G'  shift, and go to state 11

    T_LINE_SEP  reduce using rule 5 (declaration)
    $default    reduce using rule 2 (tmsp)

    declaration  go to state 27


state 14

    3 declarations: declaration . T_LINE_SEP

    T_LINE_SEP  shift, and go to state 28


state 15

    6 declaration: 'R' T_INT . T_INT T_STRING

    T_INT  shift, and go to state 29


state 16

    7 declaration: 'T' T_INT . T_INT T_INT T_STRING

    T_INT  shift, and go to state 30


state 17

    8 declaration: 'J' T_INT . T_INT T_INT T_STRING

    T_INT  shift, and go to state 31


state 18

    9 declaration: 'A' T_INT . T_INT T_INT T_STRING
   10            | 'A' T_INT . T_INT T_INT T_STRING T_INT
   11            | 'A' T_INT . T_INT T_INT T_STRING T_INT T_INT T_INT

    T_INT  shift, and go to state 32


state 19

   12 declaration: 'D' T_INT . T_INT T_INT T_STRING

    T_INT  shift, and go to state 33


state 20

   13 declaration: 'Q' T_INT . T_INT T_INT T_INT

    T_INT  shift, and go to state 34


state 21

   14 declaration: 'S' T_INT . T_INT T_INT T_INT

    T_INT  shift, and go to state 35


state 22

   15 declaration: 'P' T_INT . T_INT T_INT T_INT

    T_INT  shift, and go to state 36


state 23

   16 declaration: 'p' T_INT . T_INT T_INT T_INT

    T_INT  shift, and go to state 37


state 24

   17 declaration: 'F' T_INT . T_INT T_INT

    T_INT  shift, and go to state 38


state 25

   18 declaration: 'G' T_INT . T_INT T_INT T_INT

    T_INT  shift, and go to state 39


state 26

    0 $accept: tmsp $end .

    $default  accept


state 27

    4 declarations: declarations declaration . T_LINE_SEP

    T_LINE_SEP  shift, and go to state 40


state 28

    3 declarations: declaration T_LINE_SEP .

    $default  reduce using rule 3 (declarations)


state 29

    6 declaration: 'R' T_INT T_INT . T_STRING

    T_STRING  shift, and go to state 41


state 30

    7 declaration: 'T' T_INT T_INT . T_INT T_STRING

    T_INT  shift, and go to state 42


state 31

    8 declaration: 'J' T_INT T_INT . T_INT T_STRING

    T_INT  shift, and go to state 43


state 32

    9 declaration: 'A' T_INT T_INT . T_INT T_STRING
   10            | 'A' T_INT T_INT . T_INT T_STRING T_INT
   11            | 'A' T_INT T_INT . T_INT T_STRING T_INT T_INT T_INT

    T_INT  shift, and go to state 44


state 33

   12 declaration: 'D' T_INT T_INT . T_INT T_STRING

    T_INT  shift, and go to state 45


state 34

   13 declaration: 'Q' T_INT T_INT . T_INT T_INT

    T_INT  shift, and go to state 46


state 35

   14 declaration: 'S' T_INT T_INT . T_INT T_INT

    T_INT  shift, and go to state 47


state 36

   15 declaration: 'P' T_INT T_INT . T_INT T_INT

    T_INT  shift, and go to state 48


state 37

   16 declaration: 'p' T_INT T_INT . T_INT T_INT

    T_INT  shift, and go to state 49


state 38

   17 declaration: 'F' T_INT T_INT . T_INT

    T_INT  shift, and go to state 50


state 39

   18 declaration: 'G' T_INT T_INT . T_INT T_INT

    T_INT  shift, and go to state 51


state 40

    4 declarations: declarations declaration T_LINE_SEP .

    $default  reduce using rule 4 (declarations)


state 41

    6 declaration: 'R' T_INT T_INT T_STRING .

    $default  reduce using rule 6 (declaration)


state 42

    7 declaration: 'T' T_INT T_INT T_INT . T_STRING

    T_STRING  shift, and go to state 52


state 43

    8 declaration: 'J' T_INT T_INT T_INT . T_STRING

    T_STRING  shift, and go to state 53


state 44

    9 declaration: 'A' T_INT T_INT T_INT . T_STRING
   10            | 'A' T_INT T_INT T_INT . T_STRING T_INT
   11            | 'A' T_INT T_INT T_INT . T_STRING T_INT T_INT T_INT

    T_STRING  shift, and go to state 54


state 45

   12 declaration: 'D' T_INT T_INT T_INT . T_STRING

    T_STRING  shift, and go to state 55


state 46

   13 declaration: 'Q' T_INT T_INT T_INT . T_INT

    T_INT  shift, and go to state 56


state 47

   14 declaration: 'S' T_INT T_INT T_INT . T_INT

    T_INT  shift, and go to state 57


state 48

   15 declaration: 'P' T_INT T_INT T_INT . T_INT

    T_INT  shift, and go to state 58


state 49

   16 declaration: 'p' T_INT T_INT T_INT . T_INT

    T_INT  shift, and go to state 59


state 50

   17 declaration: 'F' T_INT T_INT T_INT .

    $default  reduce using rule 17 (declaration)


state 51

   18 declaration: 'G' T_INT T_INT T_INT . T_INT

    T_INT  shift, and go to state 60


state 52

    7 declaration: 'T' T_INT T_INT T_INT T_STRING .

    $default  reduce using rule 7 (declaration)


state 53

    8 declaration: 'J' T_INT T_INT T_INT T_STRING .

    $default  reduce using rule 8 (declaration)


state 54

    9 declaration: 'A' T_INT T_INT T_INT T_STRING .
   10            | 'A' T_INT T_INT T_INT T_STRING . T_INT
   11            | 'A' T_INT T_INT T_INT T_STRING . T_INT T_INT T_INT

    T_INT  shift, and go to state 61

    $default  reduce using rule 9 (declaration)


state 55

   12 declaration: 'D' T_INT T_INT T_INT T_STRING .

    $default  reduce using rule 12 (declaration)


state 56

   13 declaration: 'Q' T_INT T_INT T_INT T_INT .

    $default  reduce using rule 13 (declaration)


state 57

   14 declaration: 'S' T_INT T_INT T_INT T_INT .

    $default  reduce using rule 14 (declaration)


state 58

   15 declaration: 'P' T_INT T_INT T_INT T_INT .

    $default  reduce using rule 15 (declaration)


state 59

   16 declaration: 'p' T_INT T_INT T_INT T_INT .

    $default  reduce using rule 16 (declaration)


state 60

   18 declaration: 'G' T_INT T_INT T_INT T_INT .

    $default  reduce using rule 18 (declaration)


state 61

   10 declaration: 'A' T_INT T_INT T_INT T_STRING T_INT .
   11            | 'A' T_INT T_INT T_INT T_STRING T_INT . T_INT T_INT

    T_INT  shift, and go to state 62

    $default  reduce using rule 10 (declaration)


state 62

   11 declaration: 'A' T_INT T_INT T_INT T_STRING T_INT T_INT . T_INT

    T_INT  shift, and go to state 63


state 63

   11 declaration: 'A' T_INT T_INT T_INT T_STRING T_INT T_INT T_INT .

    $default  reduce using rule 11 (declaration)
